# imperium-deck-client

./: .gitignore  README.md  requirements.txt
app/: __init__.py  discover.py  server.py  terminal_ui.py
calibration/: final_mappings.json  latest.json
deploy/: imperium-deck-client.desktop  imperium-deck-client.service
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
native-ui/: package-lock.json  package.json
native-ui/launcher/: index.html
native-ui/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: build_native_ui.sh  install.sh  launch_native_ui.sh  uninstall.sh  update.sh
tools/: calibrate_hidraw.py  deck_input_monitor_evdev.py  deck_input_monitor_hidraw.py  deck_live_monitor.py  kmsgrab_helper_service.py  run_deck_live_monitor.sh
web/: index.html
web/assets/: index-BJwJjX9E.css  index-BTqj913M.js  index-BktJKX__.css  index-Culmlfk1.css  index-DvoDAtTm.js  index-s_pF3Fc6.js
